# agentic-browser

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  agentflow.json  pyproject.toml  react_sync.py  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
browser_agent/: __init__.py  app.py  config.py
browser_agent/agent/: collaboration.py  dogfood.py  error_recovery.py  graph.py  guardrails.py  prompts.py  state.py  tools.py  vision.py
browser_agent/autonomous/: rules_engine.py
browser_agent/bridge/: agent_controller.py  async_bridge.py  signals.py
browser_agent/browser/: engine.py  js_scripts.py  page_controller.py  screenshot.py  snapshot_diff.py
browser_agent/multiagent/: coordinator.py
browser_agent/predictive/: pattern_tracker.py
browser_agent/recording/: exporter.py  models.py  recorder.py
browser_agent/skills/: models.py  player.py  recorder.py  store.py
browser_agent/storage/: conversation_db.py  memory_db.py  session_state.py  user_profile.py
browser_agent/ui/: animated_input.py  browser_panel.py  chat_message_widget.py  chat_panel.py  help_request_widget.py  main_window.py  markdown_renderer.py  nav_button.py  progress_bar.py  rules_panel.py  skills_panel.py  styles.py  tab_bar.py  thread_selector.py  tool_call_widget.py  url_bar.py
browser_agent/voice/: engine.py
generated_skills/code-review/: SKILL.md
generated_skills/debugger/: SKILL.md
generated_skills/refactoring/: SKILL.md
generated_skills/security-review/: SKILL.md
generated_skills/test-generator/: SKILL.md
tests/: test_collaboration.py  test_guardrails.py  test_rules_engine.py  test_storage.py
