[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-browser"
version = "0.1.0"
description = "AI-powered desktop browser with a chat sidebar — Gemini Flash sees and controls web pages in real time"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mothilal M"},
]
keywords = ["ai", "browser", "agent", "automation", "gemini", "pyqt6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "10xscale-agentflow[google-genai]>=0.7.2",
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "qasync>=0.27",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/Mothilal-M/agentic-browser"
Repository = "https://github.com/Mothilal-M/agentic-browser"
Issues = "https://github.com/Mothilal-M/agentic-browser/issues"

[project.scripts]
agentic-browser = "browser_agent.app:main"

[tool.setuptools.packages.find]
include = ["browser_agent*"]

[tool.setuptools.package-data]
"browser_agent.ui.fonts" = ["*.ttf"]

# ── Testing ──────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

# ── Coverage ─────────────────────────────────────
[tool.coverage.run]
source = ["browser_agent"]
omit = ["tests/*", "browser_agent/ui/fonts/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 50

# ── Linting & Formatting ────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "S101",  # assert in tests is fine
    "T201",  # print statements (CLI app)
    "E501",  # line length (handled by formatter)
    "B008",  # function call in default arg (pydantic pattern)
    "S603",  # subprocess without shell=True check
    "S607",  # partial executable path
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
"browser_agent/browser/js_scripts.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["browser_agent"]
